# track

./: Cargo.toml  README.md
benches/: bench_main.rs
benches/benchmarks/: change_monitoring.rs  mod.rs  serialisation.rs  serialization.rs
docs/: CHANGELOG.md
examples/: track-change.rs
src/: apply.rs  channel.rs  error.rs  event.rs  lib.rs  serialisation.rs  serialization.rs  tracker.rs
src/serialisation/: bincode.rs  rmp.rs
src/serialization/: bincode.rs  rmp.rs
